fixed overflow on background

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ body {
     width: 100%;
     height: 550px;
     margin:0;
-    overflow-x: hidden;
   }
   #flip, #reset-stats {
       letter-spacing:1px;
